# rayglow

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  LOCAL-SETUP.example.md  README.md  TUNING.md  pyproject.toml  will-notes.md
docs/design-history/: BUILD-HISTORY.md  PROJECT-PLAN.md  README.md  project-milk-pi.md
experiments/: README.md  caustic-waves.py  flocking.py  gray-scott.py  langton.py  ollama.py  phase-flow.py
firmware/: .gitignore  2026-06-18-065958-claude-PIO-BUS.md  Cargo.toml  README.md  THIRD-PARTY.md  build.rs  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: dma.rs  lib.rs  lut.rs  single.rs
hardware/: KICAD-AGENT-TOOLING.md  NET-SPEC.md  NETLIST-REVIEW.md  PIZERO-HEADER-PINOUT.md  README.md  gen_hat.py  gen_hat_sklib.py  pyproject.toml  rp2350-hub75-hat.net
hardware/fab/: rp2350-rgb-pcb-B_Cu.gbl  rp2350-rgb-pcb-B_Mask.gbs  rp2350-rgb-pcb-B_Paste.gbp  rp2350-rgb-pcb-B_Silkscreen.gbo  rp2350-rgb-pcb-Edge_Cuts.gm1  rp2350-rgb-pcb-F_Cu.gtl  rp2350-rgb-pcb-F_Mask.gts  rp2350-rgb-pcb-F_Paste.gtp  rp2350-rgb-pcb-F_Silkscreen.gto  rp2350-rgb-pcb-NPTH-drl_map.gbr  rp2350-rgb-pcb-NPTH.drl  rp2350-rgb-pcb-PTH-drl_map.gbr  rp2350-rgb-pcb-PTH.drl  rp2350-rgb-pcb-job.gbrjob
hardware/rp2350-rgb-pcb/: rp2350-rgb-pcb.kicad_pcb  rp2350-rgb-pcb.kicad_pro  rp2350-rgb-pcb.kicad_sch
hzeller-direct/: fields.py  navier-stokes.py  plasma.py  schrodinger.py  slime.py  starfall-old.py  tuner.py
milk/: __init__.py  __main__.py  config.py  draw.py  engine.py  framebuffer.py  playlist.py  receiver.py  warp.py
milk/dotmilk/: custom.py  parser.py  runtime.py  triage.py  waves.py
milk/presets/dotmilk-presets/: Altunenes - MilkDrop2077 - Information Process3.milk  Altunenes - MilkDrop2077 - Information Process4.milk  Altunenes - MilkDrop2077 - circuit network9.milk  BigWings + IkeC - MilkDrop2077 - Heartless3.milk  Blank2.milk  Evet + Geiss - Chrome - MilkDrop2077 001s.milk  Evet + Geiss - Chrome - MilkDrop2077 003b.milk  Evet + Geiss - Chrome - MilkDrop2077 004.milk  Evet + Geiss - Chrome - MilkDrop2077 004c.milk  Flexi, Geiss and Rovastar - chaos layered tokamak.milk  Incubo - DeepSeek - Flowing Color Waves MilkDrop2077rmx1.milk  Jaenam - MilkDrop2077 - Perlin Fluid LSD.milk  Mdgeorge - 3Body Glass - MilkDrop2077 Butterfly1.milk2  Mdgeorge - 3Body Glass - MilkDrop2077 Butterfly2.milk2  MilkDrop2077 + bdrv + flexi - spiral out.milk  MilkDrop2077 + bdrv + flexi - the glass bead game 001.milk  MilkDrop2077 + bdrv + flexi - the glass bead game 002.milk  MilkDrop2077 + bdrv + flexi - the glass bead game 004.milk  MilkDrop2077 + bdrv + flexi - the glass bead game 005.milk  MilkDrop2077 + bdrv + flexi - the glass bead game 006.milk  MilkDrop2077 - $$$ Royal - Mashup (128) 2.milk2  MilkDrop2077 - $$$ Royal - Mashup (128).milk2  MilkDrop2077 - $$$ Royal - Mashup (398).milk2  MilkDrop2077 - $$$ Royal - Mashup2.milk  MilkDrop2077 - $$$ Royal - Mashup2b.milk2  MilkDrop2077 - 02_MW_new01B.milk  MilkDrop2077 - 5 Stars.milk2  MilkDrop2077 - Double stringy things.milk2  MilkDrop2077 - Dude the walls are moving1.milk  MilkDrop2077 - Face of MilkDrop.milk  MilkDrop2077 - Ferrofluid Ball1.milk  MilkDrop2077 - Hexcollie - Magma spiral.milk2  MilkDrop2077 - Interstellar.milk  MilkDrop2077 - Ivermectin.milk2  MilkDrop2077 - Ivermectin2.milk  MilkDrop2077 - Lasers from the Sky1.milk  MilkDrop2077 - Lasers from the Sky2.milk  MilkDrop2077 - Neon Circle.milk  MilkDrop2077 - NeonAngel vs Flexi - Black Hole Textures 1 Cube.milk  MilkDrop2077 - NeonAngel vs Flexi - Black Hole Textures 2 Triple Images.milk2  (+214 more)
rayglow/: __init__.py  fake_sender.py  spi_test.py
rayglow/feed/: __init__.py  config.py  features.py
rayglow/legacy/: README.md  __init__.py  __main__.py  engine.py  framebuffer.py  warp.py
rayglow/legacy/dotmilk/: __init__.py  custom.py  eel.py  runtime.py  triage.py  waves.py
rayglow/legacy/milkpresets/: __init__.py  tunnel.py  wobble.py
rayglow/legacy/milkpresets/dotmilk-presets/: 000.milk2  Blank.milk  Blank3.milk  Evet + Geiss - Chrome - MilkDrop2077 004b.milk  Flexi + Amandio c - piercing 01.milk  Flexi + Geiss + BDRV - illumination.milk  Flexi + Rovastar - Fractopia [blame hexcollie].milk  Flexi - bouncing balls [double mindblob neon mix].milk  Flexi - color drops [another jelly attempt].milk  Flexi - crush ice 52s.milk  Gaggiuino - Flyguy - Rainbow Twister.milk  Geiss - Artifact 6.milk  (+181 more)
rayglow/render/: __init__.py  __main__.py  egl.py  hub75.py  output.py  passes.py  pio_out.py  pipeline.py  preamble.py  reload.py  spi_out.py
rayglow/render/piobridge/: Makefile  README.md  pio_shim.c
rayglow/render/presets/: REFERENCE.glsl  bluerust.glsl  bokeh.glsl  burple.glsl  celgrafiti.glsl  clouds.glsl  contours.bufA.glsl  contours.glsl  fractal.glsl  glsl-data-types-reference.md  golfing-with-gemma-1.glsl  golfing-with-gemma-2.glsl  golfing-with-gemma-3.glsl  golfing-with-gemma-4.glsl  golfing-with-gemma-5.glsl  golfing-with-gemma-6.glsl  greycellshift.glsl  milkfeed.glsl  neon_tunnel.glsl  oilswirl.glsl  radio-waterfall.bufA.glsl  simpleinteresting.glsl  spiralrainbowmx.glsl  will-blob.glsl  will-circles-state.glsl  will-circles.glsl  will-helix.glsl  will-ray-circles.glsl
sender/: CLAUDE.md  README.md  pyproject.toml  sender.py
shadertoy/: __init__.py  __main__.py  egl.py  output.py  pipeline.py  reload.py  textures.py
shadertoy/presets/: audiodemo.glsl  busykal.glsl  cubescape.glsl  dotsdots.glsl  flowerpower.glsl  greengridblobs.glsl  horizon.glsl  juliedotdotdot.glsl  landsky.glsl  life.bufA.glsl  life.glsl  lucydiamond.glsl  mandelbrot.glsl  mandlebro.glsl  mario.glsl  milk-verbose.glsl  northernlights.glsl  nyan.glsl  orangecrates.glsl  overexposed.glsl  prettypastel.glsl  psychonautcave.glsl  rainbowcircles.glsl  serpentnoodles.glsl  serpentpattern.glsl  shitsonfireyo.glsl  smokey.glsl  spaz.glsl  star.glsl  synth.glsl  tubular.glsl  will-sphere.glsl  yaknowitsaline.glsl
shadertoy/presets/backup/: will-helix.bufA.glsl.bak  will-helix.glsl.bak
tools/: pio_ramp.py  verify.py
tools/golden-frame/: Cargo.toml
tools/golden-frame/src/: main.rs
(+7 files in other folders)
