[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rayglow"
version = "0.1.0"
description = "Audio-reactive GLSL visuals on an RGB LED matrix (the Pi renderer half)."
readme = "README.md"
requires-python = ">=3.11"
# Core deps for the live renderer (rayglow.render) + feed (rayglow.feed).
#   numpy  — feature math, packet (de)serialization, frame buffers
#   Pillow — RGBMatrix.SetImage / dry-run GIF output
dependencies = [
    "numpy",
    "Pillow",
]

# IMPORTANT: rgbmatrix (hzeller's rpi-rgb-led-matrix) is a hard runtime
# requirement for HARDWARE mode, but it is deliberately NOT listed here. It
# only builds on the Pi (cython + GPIO), so listing it would break
# `pip install` / `uv` on the desktop. On the Pi it's pre-built in ~/rgbvenv;
# the headless dry-run path imports it lazily and never needs it. See
# ATTRIBUTION.md and the top-level README for the deploy story.

[project.optional-dependencies]
# The retired NumPy/OpenCV renderer (rayglow.legacy) additionally needs OpenCV.
# `pip install -e .[legacy]` to run it.
legacy = ["opencv-python"]

[tool.setuptools.packages.find]
include = ["rayglow*"]
