[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rayglow"
version = "0.1.0"
description = "Audio-reactive GLSL visuals on an RGB LED matrix (the Pi renderer half)."
readme = "README.md"
requires-python = ">=3.11"
# Core deps for the live renderer (rayglow.render) + feed (rayglow.feed).
#   numpy  — feature math, packet (de)serialization, frame buffers
#   Pillow — dry-run GIF output
dependencies = [
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
# Hardware output on the Pi: the SPI backend (render/spi_out.py) ships packed
# frames to the rp2350b and reads its READY line.  These are Pi-only and
# imported lazily, so the desktop dry-run path never needs them — install with
# `uv pip install -e .[pi]` on the Pi.  (EGL/GLES come from system libs, not pip.)
pi = ["spidev", "gpiozero", "lgpio"]

[tool.setuptools.packages.find]
include = ["rayglow*"]
